--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,12 @@
     "strictNullChecks": true,
     "baseUrl": ".",
     "paths": {
+      "@/*": ["src/*"],
       "@components/*": ["src/components/*"],
+      "@layouts/*": ["src/layouts/*"],
+      "@pages/*": ["src/pages/*"],
       "@assets/*": ["src/assets/*"],
+      "@styles/*": ["src/styles/*"]
     }
   }
 }
